# autoreg_splat

./: pyproject.toml  run.sh
autoreg_splat/: __init__.py
autoreg_splat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autoreg_splat/data/: __init__.py  dataset.py  hilbert.py
autoreg_splat/inference/: __init__.py  sampling.py
autoreg_splat/models/: __init__.py  encoder.py  tokenizer.py  transformer.py
autoreg_splat/utils/: __init__.py  gaussian.py
configs/: default.yaml
data/synthetic/scene_00000/: gaussians.npz
data/synthetic/scene_00001/: gaussians.npz
data/synthetic/scene_00002/: gaussians.npz
data/synthetic/scene_00003/: gaussians.npz
data/synthetic/scene_00004/: gaussians.npz
data/synthetic/scene_00005/: gaussians.npz
data/synthetic/scene_00006/: gaussians.npz
data/synthetic/scene_00007/: gaussians.npz
data/synthetic/scene_00008/: gaussians.npz
data/synthetic/scene_00009/: gaussians.npz
scripts/: diagnose_model.py  diagnose_tokenizer.py  evaluate.py  generate_synthetic.py  preprocess.py  train_model.py  train_tokenizer.py
tests/: test_smoke.py
