[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreg-splat"
version = "0.1.0"
description = "Autoregressive 3D Gaussian Splatting — a world model for 3D reconstruction"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
    "plyfile>=1.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
render = ["gsplat>=0.1.0"]

[tool.setuptools.packages.find]
include = ["autoreg_splat*"]
